--- a/dga-opgave/src/components/Navigation/Navigation.module.scss
+++ b/dga-opgave/src/components/Navigation/Navigation.module.scss
@@ -48,7 +48,6 @@
 
 .icon {
   display: flex;
-  margin-top: 20px;
   gap: 10px; 
 
   img {
